@@ -2,6 +2,8 @@ CHANGES IN FLTK 1.1.7
 
 	- Documentation fixes (STR #648, STR #692, STR #730, STR
 	  #744, STR #745, STR #942, STR #931)
+	- Updated WIN32 cut/paste code to consistently handle DOS
+	  text (STR #961)
 	- Added shared library support for Cygwin and MingW (STR
 	  #893)
 	- Fl_File_Chooser did not implement the user_data()
